# BackupArr

./: .env.example  .gitignore  LICENSE  README.md  functions.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-assets.yml
backuparr/: api_stuff.py  backup.py  config.py  functions.py  main.py  restore.py
backuparr/configs/: config.py
backuparr/scripts/: help.py  init.py
backuparr/utils/: colors.py  errors.py  functions.py  printing.py
src/: api_stuff.py  backup.py  functions.py  main.py  restore.py
utils/: utils.py
